--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -65,6 +65,13 @@
   }
 }
 
+@layer components {
+  .modal-bg {
+      @apply fixed inset-0 bg-black/30 backdrop-blur-sm flex justify-center items-center z-50;
+  }
+}
+
+
 .grid-background {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.045) 1px, transparent 1px),
                     linear-gradient(to bottom, rgba(0, 0, 0, 0.045) 1px, transparent 1px);
