--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -78,3 +78,12 @@
   background-size: 50px 50px; /* Adjust the grid size here */
 }
 
+/* .tweet-container  */
+.tweet-container {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+.react-tweet-theme{
+  margin:0 !important;
+}
